--- a/sgx/2.10/Dockerfile
+++ b/sgx/2.10/Dockerfile
@@ -26,10 +26,13 @@ RUN git clone https://github.com/intel/linux-sgx.git -b sgx_${VERSION}
 WORKDIR ${USER_DIR}/linux-sgx
 RUN ./download_prebuilt.sh
 
-RUN ls -l
-RUN ls -l ..
-COPY tmp/external_link_${VERSION}.sh /tmp/external_link.sh
-RUN  /tmp/external_link.sh
+RUN pwd; ls -l
+RUN pwd; ls -l ..
+WORKDIR ${USER_DIR}
+RUN pwd; ls -l
+RUN cp external/toolset/ubuntu20.04/{as,ld,ld.gold,objdump} /usr/local/bin
+#COPY tmp/external_link_${VERSION}.sh /tmp/external_link.sh
+#RUN  /tmp/external_link.sh
 
 RUN make sdk_install_pkg DEBUG=${DEBUG}
 
