--- a/riscv/1.0.0/Dockerfile
+++ b/riscv/1.0.0/Dockerfile
@@ -20,7 +20,7 @@ RUN mkdir -p ${USER_DIR}/.ssh && ssh-keyscan -H github.com >> ${USER_DIR}/.ssh/k
 RUN git clone https://github.com/keystone-enclave/keyedge.git
 WORKDIR $USER_DIR/keyedge
 RUN rm -fr flatcc
-RUN git clone https://github.com/dvidelabs/flatcc.git && \
+RUN git clone https://github.com/dvidelabs/flatcc.git && cd flatcc && \
     git checkout 2abb8b5d12ef56cebeaa291d42832b5deb436783
 RUN git submodule sync --recursive
 RUN git submodule update --init --recursive
