Was not cloning sub-directories

--- a/riscv/1.0.0/Dockerfile
+++ b/riscv/1.0.0/Dockerfile
@@ -10,11 +10,13 @@ WORKDIR $USER_DIR
 
 ARG VERSION=v1.0.0
 RUN git clone https://github.com/keystone-enclave/keystone -b ${VERSION}
-RUN git submodule sync --recursive
-RUN git submodule update --init --recursive
 
 ENV KEYSTONE_DIR=$USER_DIR/keystone
-ENV RISCV=${KEYSTONE_DIR}/riscv64
+#ENV RISCV=${KEYSTONE_DIR}/riscv64
+
+WORKDIR $KEYSTONE_DIR
+RUN git submodule sync --recursive
+RUN git submodule update --init --recursive
 
 # install keyedge
 RUN mkdir -p ${USER_DIR}/.ssh && ssh-keyscan -H github.com >> ${USER_DIR}/.ssh/known_hosts
