Improving git clone speed

--- a/riscv/1.0.0/Dockerfile
+++ b/riscv/1.0.0/Dockerfile
@@ -36,6 +36,20 @@ ENV KEYSTONE_DIR=$USER_DIR/keystone
 #ENV RISCV=${KEYSTONE_DIR}/riscv64
 
 WORKDIR $KEYSTONE_DIR
+# copying procedure from https://github.com/keystone-enclave/keystone/blob/v1.0.0/fast-setup.sh
+# It is for improving git clone speed
+RUN git config submodule.riscv-gnu-toolchain.update none
+
+# shallow clone submodules ahead of time (Git must be > 2.11)
+RUN if [ ! -e linux/.git ]; then \
+      git clone --shallow-since=2020-05-15 https://github.com/torvalds/linux.git linux \
+    fi
+RUN if [ ! -e buildroot/.git ]; then \
+      git clone --shallow-since=2020-04-15 https://github.com/buildroot/buildroot.git buildroot \
+    fi
+RUN if [ ! -e qemu/.git ]; then \
+      git clone --shallow-since=2020-11-15 https://github.com/qemu/qemu.git qemu \
+    fi
 RUN git submodule sync --recursive
 RUN git submodule update --init --recursive
 
