--- a/sgx/2.10/Dockerfile
+++ b/sgx/2.10/Dockerfile
@@ -43,9 +43,9 @@ RUN ls -l /home/user/linux-sgx/linux/installer/bin/
 RUN echo ' expect -c "     spawn \"$1\"     expect \"Do you want to install in current directory?\" { send \"no\r\" }     expect \"Please input the directory which you want to install in\" { send \"$2\r\" }     expect eof "' > exp.sh
 
 RUN chmod u+x exp.sh
-RUN ./exp.sh ${SGX_DIR}/linux/installer/bin/sgx_linux_x64_sdk_*.bin ${SGX_INSTALL_DIR}
+RUN ./exp.sh ${SGX_DIR}/linux/installer/bin/sgx_linux_x64_sdk_2.10.100.2.bin ${SGX_INSTALL_DIR}
 RUN  expect -c " \
-    spawn \"${SGX_DIR}/linux/installer/bin/sgx_linux_x64_sdk_*.bin\" \
+    spawn \"${SGX_DIR}/linux/installer/bin/sgx_linux_x64_sdk_2.10.100.2.bin\" \
     expect \"Do you want to install in current directory?\" { send \"no\r\" } \
     expect \"Please input the directory which you want to install in\" { send \"${SGX_INSTALL_DIR}\r\" } \
     expect eof "
