Worng install direcotry

--- a/riscv/1.0.0/Dockerfile
+++ b/riscv/1.0.0/Dockerfile
@@ -54,12 +54,13 @@ RUN git submodule sync --recursive
 RUN git submodule update --init --recursive
 
 # increase number of edge calls
-ENV KEYSTONE_SDK_DIR=${KEYSTONE_DIR}/sdk
-WORKDIR $KEYSTONE_SDK_DIR
 RUN git checkout v1.0.0
 RUN pwd; ls -l
 RUN cd $USER_DIR; find . -name edge_common.h
 RUN sed -i 's/MAX_EDGE_CALL 10$/MAX_EDGE_CALL 1000/' ${KEYSTONE_DIR}/sdk/include/edge/edge_common.h
+
+# KEYSTONE_SDK_DIR is the directory to install
+ENV KEYSTONE_SDK_DIR=${USER_DIR}/keystone-sdk
 RUN rm -rf build build64 && \
   mkdir -p build && \
   cd build && \
