Change to SGX_DIR before make for sgx 2.10
Since the directory is not changed back to SGX_DIR,
the make was not successful. Added a command to return
back to SGX_DIR and then perform make.

--- a/sgx/2.10/Dockerfile
+++ b/sgx/2.10/Dockerfile
@@ -31,6 +31,7 @@ RUN pwd; ls -l; echo 2
 RUN pwd; ls -l external/toolset/; echo 2
 RUN pwd; ls -l external/toolset/ubuntu20.04/; echo 2
 RUN cd external/toolset/ubuntu20.04/ && cp as ld ld.gold objdump /usr/local/bin
+RUN cd ${SGX_DIR}
 
 RUN make sdk_install_pkg DEBUG=${DEBUG}
 
