--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,21 +13,21 @@ tee-dev-sgx_2.10:
     tags:
         - shell117
     script:
-        - docker build --build-arg VERSION=2.10 --build-arg DEBUG_DATE=$(date %s) --rm -t ${ORG}:sgx-2.10 ./sgx/2.10
+        - docker build --build-arg VERSION=2.10 --build-arg DEBUG_DATE=$(date +%s) --rm -t ${ORG}:sgx-2.10 ./sgx/2.10
 
 tee-dev-optee_3.9.0:
     stage: create-docker
     tags:
         - shell117
     script:
-        - docker build --build-arg VERSION=3.9.0 --build-arg DEBUG_DATE=$(date %s) --rm -t ${ORG}:optee-3.9.0 ./optee/3.9.0
+        - docker build --build-arg VERSION=3.9.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t ${ORG}:optee-3.9.0 ./optee/3.9.0
 
 tee-dev-keystone_1.0.0:
     stage: create-docker
     tags:
         - shell117
     script:
-        - docker build --build-arg VERSION=v1.0.0 --build-arg DEBUG_DATE=$(date %s) --rm -t ${ORG}:keystone-1.0.0 ./riscv/1.0.0
+        - docker build --build-arg VERSION=v1.0.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t ${ORG}:keystone-1.0.0 ./keystone/1.0.0
 
 docker-push-public:
     stage: push-public
