Trying to combine make command for optee

--- a/optee/3.9.0/Dockerfile
+++ b/optee/3.9.0/Dockerfile
@@ -21,21 +21,18 @@ RUN mkdir -p ${OPTEE_DIR} && cd ${OPTEE_DIR} && \
   ~/bin/repo sync -j4 --no-clone-bundle && \
   ln -s ${TOOLCHAIN_DIR} ${OPTEE_DIR}/toolchains
 
-WORKDIR ${OPTEE_DIR}/build
-
 # To print the output of following command
 ARG DEBUG_DATE=
 
 # Build optee
-RUN make -j4
+RUN cd ${OPTEE_DIR}/build &&  \
+  make -j4
 
 # Second build to copy only optee-dir
 FROM aistcpsec/tee-distro-dev:arm64-20.04 as slim
 
 # set the env variables
 ENV OPTEE_DIR=${USER_DIR}/optee
-
-
 
 #copy only built opteedir
 COPY --from=builder ${OPTEE_DIR} ${OPTEE_DIR}
