--- a/optee/3.9.0/Dockerfile
+++ b/optee/3.9.0/Dockerfile
@@ -5,6 +5,15 @@ ENV USER_DIR=/home/user
 ENV OPTEE_DIR=${USER_DIR}/optee
 ENV FORCE_UNSAFE_CONFIGURE=1
 
+# To cope with the problem, https://github.com/OP-TEE/build/issues/424#issuecomment-631302208.
+# See also https://qiita.com/suin/items/856bf782d0d295352e51
+RUN apt-get update -y && apt-get install -y locales && \
+  locale-gen en_US.UTF-8
+ENV LANG=en_US.UTF-8
+ENV LANGUAGE=en_US:en
+ENV LC_ALL=en_US.UTF-8
+
+# To get the build args version information
 ARG VERSION=
 
 # Install Android repo
@@ -26,7 +35,7 @@ RUN mkdir -p ${OPTEE_DIR} && cd ${OPTEE_DIR} && \
 ARG DEBUG_DATE=
 
 # Build optee
-RUN cd ${OPTEE_DIR}/build && make
+RUN cd ${OPTEE_DIR}/build && make -j`nproc`
 
 # Second build to copy only optee-dir
 FROM aistcpsec/tee-distro-dev:arm64-20.04 as slim
