--- a/sgx/2.10/Dockerfile
+++ b/sgx/2.10/Dockerfile
@@ -7,41 +7,37 @@ USER build-user
 # This is to prevent waiting for key type when installing tzdata
 ENV DEBIAN_FRONTEND=noninteractive
 ENV USER_DIR=/home/user
-ENV LINUX_SGX_DIR=${USER_DIR}/sgx
-ARG DEBUG=1
 
 # Set the required environmental variables.
-ENV SGX_INSTALL_DIR=/opt/intel
-ENV SGX_SDK=${SGX_INSTALL_DIR}/sgxsdk
-ENV PATH=${PATH}:${SGX_SDK}/bin:${SGX_SDK}/bin/x64
-ENV PKG_CONFIG_PATH=${SGX_SDK}/pkgconfig
-ENV LD_LIBRARY_PATH=${SGX_SDK}/sdk_libs
-
-# Create and change to ${LINUX_SGX_DIR} 
-RUN mkdir -p ${LINUX_SGX_DIR} 
-WORKDIR ${LINUX_SGX_DIR}
+ENV OPT_INTEL=/opt/intel
+ENV SDK_INSTALL_DIR=${OPT_INTEL}/sgxsdk
+ENV PATH=${PATH}:${SDK_INSTALL_DIR}/bin:${SDK_INSTALL_DIR}/bin/x64
+ENV PKG_CONFIG_PATH=${SDK_INSTALL_DIR}/pkgconfig
+ENV LD_LIBRARY_PATH=${SDK_INSTALL_DIR}/sdk_libs
+ARG DEBUG=1
 
 # Print the version from the command-line args
 ARG VERSION=
 RUN echo ${VERSION}
 
+# Where to clone
+WORKDIR ${USER_DIR}
+
 # Clone the Intel SGX repo
 RUN git clone https://github.com/intel/linux-sgx.git -b sgx_${VERSION}
 
 # Set the sgx base dir
-ENV SGX_DIR=${LINUX_SGX_DIR}/linux-sgx
-RUN mkdir -p ${SGX_DIR} 
-WORKDIR ${SGX_DIR}
+ENV CLONE_DIR=${USER_DIR}/linux-sgx
+WORKDIR ${CLONE_DIR}
 
 # Download the prebuilt binaries for intel sgx
 RUN ./download_prebuilt.sh
 RUN cd external/toolset/ubuntu20.04/ && sudo cp as ld ld.gold objdump /usr/local/bin
-RUN cd ${SGX_DIR}
 
 # Make the intel sdk package
 RUN make sdk_install_pkg DEBUG=${DEBUG}
 
-# Make a script to install the intel sgx in SGX_INSTALL_DIR 
+# Make a script to install the intel sgx in OPT_INTEL
 RUN echo '#!/usr/bin/expect -f \n\
 set install_bin [lindex $argv 0]; \n\
 set output_dir [lindex $argv 1]; \n\
@@ -56,18 +52,18 @@ expect eof' > exp.sh
 RUN chmod u+x exp.sh
 
 # Execute the script
-RUN sudo mkdir -p ${SGX_INSTALL_DIR} 
-RUN sudo ./exp.sh ${SGX_DIR}/linux/installer/bin/sgx_linux_x64_sdk_2.10.100.2.bin ${SGX_INSTALL_DIR}
+RUN sudo mkdir -p ${OPT_INTEL}
+RUN sudo ./exp.sh ${CLONE_DIR}/linux/installer/bin/sgx_linux_x64_sdk_2.10.100.2.bin ${OPT_INTEL}
 
-# Print the contents for confirmation
-RUN ls -l ${SGX_INSTALL_DIR}
-RUN ls -l ${SGX_DIR}
+# Print the contents for confirmation, debug purpose
+RUN ls -l ${CLONE_DIR}
+RUN ls -l ${OPT_INTEL}
 
 # build the Intel(R) SGX PSW and its installer
 # deb_psw_pkg includes `make psw`
 # see Note) in https://github.com/intel/linux-sgx/tree/sgx_2.8#build-the-intelr-sgx-psw-and-intelr-sgx-psw-installer
 ENV DEB_BUILD_OPTIONS="nostrip"
-ENV SGX_PSW_INSTALLER_DIR=${SGX_DIR}/linux/installer
+ENV SGX_PSW_INSTALLER_DIR=${CLONE_DIR}/linux/installer
 RUN make deb_psw_pkg DEBUG=${DEBUG}
 
 
@@ -84,11 +80,12 @@ USER build-user
 # for tzdata
 ENV DEBIAN_FRONTEND=noninteractive
 ENV USER_DIR=/home/user
-ENV LINUX_SGX_DIR=${USER_DIR}/sgx
-ENV SGX_DIR=${LINUX_SGX_DIR}/linux-sgx
-ENV SGX_INSTALL_DIR=/opt/intel
-ENV SGX_SDK=${SGX_INSTALL_DIR}/sgxsdk
 
-# see ${SGX_SDK}/environment
-ENV PATH=${PATH}:${SGX_SDK}/bin:${SGX_SDK}/bin/x64
-COPY --from=builder ${SGX_INSTALL_DIR} ${SGX_INSTALL_DIR}
+ENV OPT_INTEL=/opt/intel
+ENV SDK_INSTALL_DIR=${OPT_INTEL}/sgxsdk
+
+# see ${SDK_INSTALL_DIR}/environment
+ENV PATH=${PATH}:${SDK_INSTALL_DIR}/bin:${SDK_INSTALL_DIR}/bin/x64
+
+# copy only installed sgx binaries
+COPY --from=builder ${OPT_INTEL} ${OPT_INTEL}
