--- a/optee/3.9.0/Dockerfile
+++ b/optee/3.9.0/Dockerfile
@@ -6,32 +6,35 @@ USER build-user
 # Set the required env variables
 ENV USER_DIR=/home/user
 ENV OPTEE_DIR=${USER_DIR}/optee
-ENV FORCE_UNSAFE_CONFIGURE=1
-
-# To get the build args version information
-ARG VERSION=
+#ENV FORCE_UNSAFE_CONFIGURE=1
 
 # Install Android repo
 RUN sudo git config --global user.name "dummy" && \
   sudo git config --global user.email "dummy@gmail.com" && \
   sudo git config --global color.ui false && \
-  mkdir ~/bin && \
-  curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo && \
-  chmod a+x ~/bin/repo
+  mkdir ${USER_DIR}/bin && \
+  curl https://storage.googleapis.com/git-repo-downloads/repo > ${USER_DIR}/bin/repo && \
+  chmod a+x ${USER_DIR}/bin/repo
+ENV PATH=${USER_DIR}/bin:${PATH}
+
+# To get the build args version information
+ARG VERSION=
 
 # Get the source code for optee
-RUN mkdir -p ${OPTEE_DIR} && cd ${OPTEE_DIR} && \
-  ~/bin/repo init -u https://github.com/OP-TEE/manifest.git -m qemu_v8.xml -b ${VERSION} && \
-  ~/bin/repo sync -j4 --no-clone-bundle && \
-  ln -s ${TOOLCHAIN_DIR} ${OPTEE_DIR}/toolchains
-
+RUN mkdir -p ${OPTEE_DIR}
+WORKDIR ${OPTEE_DIR}
+RUN repo init -u https://github.com/OP-TEE/manifest.git -m qemu_v8.xml -b ${VERSION}
+RUN repo sync -j4 --no-clone-bundle
+RUN ln -s ${TOOLCHAIN_DIR} ${OPTEE_DIR}/toolchains
 
 # To print the output of following command
 ARG DEBUG_DATE=
 
 # Build optee
-RUN cd ${OPTEE_DIR}/build && make -j`nproc`
+WORKDIR ${OPTEE_DIR}/build
+RUN make -j`nproc`
 
+############################################################################
 # Second build to copy only optee-dir
 FROM aistcpsec/tee-distro-dev:arm64-20.04 as slim
 
