--- a/keystone/1.0.0/Dockerfile
+++ b/keystone/1.0.0/Dockerfile
@@ -47,8 +47,9 @@ ENV RISCV=${TOOLCHAIN_DIR}
 RUN sed -i 's/MAX_EDGE_CALL 10$/MAX_EDGE_CALL 1000/' ${KEYSTONE_DIR}/sdk/include/edge/edge_common.h
 
 # Build the keystone sdk
+WORKDIR $KEYSTONE_DIR/sdk
 RUN mkdir -p build
-WORKDIR $KEYSTONE_DIR/build
+WORKDIR $KEYSTONE_DIR/sdk/build
 RUN cmake .. $SDK_FLAGS
 RUN make
 #RUN make image
